--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,14 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragmentContainer">
+            android:id="@+id/fragmentContainer"
+            >
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:elevation="15dp"
+                >
             <io.github.yavski.fabspeeddial.FabSpeedDial
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -38,7 +41,6 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:id="@+id/extendedFab"
-                android:elevation="15dp"
                 android:background="@android:color/transparent"
                 app:fabGravity="bottom_end"
                 app:fabMenu="@menu/fab_menu"
