--- a/app/src/main/res/layout/card_naprawa.xml
+++ b/app/src/main/res/layout/card_naprawa.xml
@@ -32,6 +32,7 @@
                 android:layout_marginTop="8dp"
                 android:drawableStart="@drawable/ic_repair"
                 android:drawableTint="@color/fabColor2"
+                android:drawablePadding="7dp"
                 android:text="@string/Naprawa_card_title"
                 android:textAlignment="center"
                 android:textAllCaps="true"
