--- a/app/src/main/res/layout/card_przypomnienie.xml
+++ b/app/src/main/res/layout/card_przypomnienie.xml
@@ -32,6 +32,7 @@
                 android:layout_marginTop="8dp"
                 android:drawableStart="@drawable/ic_notification"
                 android:drawableTint="@color/fabColor3"
+                android:drawablePadding="7dp"
                 android:text="PLACEHOLDER"
                 android:textAlignment="center"
                 android:textAllCaps="true"
