--- a/app/src/main/res/layout/card_tankowanie.xml
+++ b/app/src/main/res/layout/card_tankowanie.xml
@@ -32,6 +32,7 @@
                 android:layout_marginTop="8dp"
                 android:drawableStart="@drawable/ic_local_gas_station_black_24dp"
                 android:drawableTint="@color/fabColor1"
+                android:drawablePadding="7dp"
                 android:text="@string/tankowanie"
                 android:textAlignment="center"
                 android:textAllCaps="true"
