--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,7 @@
     <group android:checkableBehavior="single">
         <item android:id="@+id/nav_all_expenses"
             android:icon="@drawable/ic_all_expenses"
-            android:title="Wszystkie wydatki" />
+            android:title="Wszystkie zdarzenia" />
         <item android:id="@+id/nav_fuel_expenses"
             android:icon="@drawable/ic_local_gas_station_black_24dp"
             android:title="Tankowania" />
