--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,41 +12,50 @@
         android:id="@+id/nav_header_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:layout_marginStart="8dp"
-        android:text="@string/marka_model"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="#fff"
+        android:layout_marginBottom="24dp"
         android:shadowColor="#000"
         android:shadowRadius="3"
+        android:textColor="#fff"
+        android:textSize="32sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/nav_header_name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:shadowColor="#000"
+        android:shadowRadius="3"
+        android:textColor="#fff"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_name"
+        app:layout_constraintStart_toEndOf="@+id/nav_header_name" />
 
     <TextView
         android:id="@+id/nav_header_rocznik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textColor="#fff"
         android:shadowColor="#000"
         android:shadowRadius="3"
-        android:text="@string/rocznik"
-        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_name"
-        app:layout_constraintStart_toEndOf="@+id/nav_header_name" />
+        android:textColor="#fff"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_name2"
+        app:layout_constraintStart_toEndOf="@+id/nav_header_name2" />
 
     <TextView
         android:id="@+id/nav_header_przebiegVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
-        android:textColor="#fff"
         android:shadowColor="#000"
         android:shadowRadius="3"
-        android:text="@string/przebiegVal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="#fff"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav_header_name" />
 
     <Button
         android:id="@+id/nav_header_add_photo"
@@ -70,12 +79,11 @@
         android:id="@+id/nav_header_hardcodedKM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:textColor="#fff"
         android:shadowColor="#000"
         android:shadowRadius="3"
         android:text="km"
         android:textAlignment="viewStart"
+        android:textColor="#fff"
         app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_przebiegVal"
         app:layout_constraintStart_toEndOf="@+id/nav_header_przebiegVal" />
 
@@ -83,39 +91,38 @@
         android:id="@+id/nav_header_spalanieVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:textColor="#fff"
+        android:layout_marginStart="16dp"
         android:shadowColor="#000"
         android:shadowRadius="3"
         android:text="7.8"
         android:textAlignment="textEnd"
-        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_hardcodedL"
-        app:layout_constraintEnd_toStartOf="@+id/nav_header_hardcodedL" />
+        android:textColor="#fff"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_hardcodedKM"
+        app:layout_constraintStart_toEndOf="@+id/nav_header_hardcodedKM" />
 
     <TextView
         android:id="@+id/nav_header_hardcodedL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:textColor="#fff"
         android:shadowColor="#000"
         android:shadowRadius="3"
         android:text="L/100"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/nav_header_rocznik" />
+        android:textColor="#fff"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nav_header_spalanieVal"
+        app:layout_constraintStart_toEndOf="@+id/nav_header_spalanieVal" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:alpha="0.15"
-        android:elevation="-2dp"
         android:background="#000000"
+        android:elevation="-2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/nav_header_name"
-        />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
