--- a/app/src/main/res/layout/card_przypomnienie.xml
+++ b/app/src/main/res/layout/card_przypomnienie.xml
@@ -84,7 +84,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardDivider" />
 
-            <MultiAutoCompleteTextView
+            <TextView
                 android:id="@+id/cardOption1Value"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
