--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -125,4 +125,16 @@
         app:layout_constraintTop_toTopOf="@+id/nav_header_name"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/addedImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="-10dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/cardview_light_background" />
+
 </android.support.constraint.ConstraintLayout>
