--- a/app/src/main/res/layout/card_tankowanie.xml
+++ b/app/src/main/res/layout/card_tankowanie.xml
@@ -50,10 +50,10 @@
                 android:background="?android:attr/listDivider"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/Title" />
+                app:layout_constraintTop_toBottomOf="@+id/Date" />
 
             <TextView
-                android:id="@+id/Title"
+                android:id="@+id/Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
