--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/colorPrimaryDark</item>
+        <item name="android:datePickerDialogTheme">@style/DialogLight</item>
+        <item name="android:timePickerDialogTheme">@style/DialogTLight</item>
     </style>
 
     <style name="Base.Widget.AppCompat.Button.Small.Bordeless">
@@ -14,12 +14,59 @@
     </style>
 
     <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/darkColorPrimary</item>
         <item name="colorPrimaryDark">@color/darkColorPrimaryDark</item>
         <item name="colorAccent">@color/darkColorAccent</item>
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/darkColorPrimaryDark</item>
+        <item name="android:datePickerDialogTheme">@style/DialogDark</item>
+        <item name="android:timePickerDialogTheme">@style/DialogTDark</item>
+
     </style>
+
+    <!--DATE LIGHT-->
+    <style name="DialogLight" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:datePickerStyle">@style/DialogLightItems</item>
+        <item name="android:colorAccent">@color/colorPrimaryDark</item>
+        <item name="android:firstDayOfWeek">2</item>
+    </style>
+
+    <style name="DialogLightItems" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:headerBackground">@color/colorAccent</item>
+    </style>
+
+    <!--TIME LIGHT-->
+    <style name="DialogTLight" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:timePickerStyle">@style/DialogTLightItems</item>
+        <item name="android:colorAccent">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="DialogTLightItems"
+        parent="@android:style/Widget.Material.Light.TimePicker">
+        <item name="android:headerBackground">@color/colorAccent</item>
+    </style>
+
+    <!--DATE DARK-->
+    <style name="DialogDark" parent="android:Theme.Material.Dialog">
+        <item name="android:datePickerStyle">@style/DialogDarkItems</item>
+        <item name="android:colorAccent">@color/darkColorPrimaryDark</item>
+        <item name="android:firstDayOfWeek">2</item>
+    </style>
+
+    <style name="DialogDarkItems" parent="@android:style/Widget.Material.DatePicker">
+        <item name="android:headerBackground">@color/darkColorAccent</item>
+    </style>
+
+    <!--TIME DARK-->
+    <style name="DialogTDark" parent="android:Theme.Material.Dialog">
+        <item name="android:timePickerStyle">@style/DialogTDarkItems</item>
+        <item name="android:colorAccent">@color/darkColorPrimaryDark</item>
+    </style>
+
+    <style name="DialogTDarkItems"
+        parent="@android:style/Widget.Material.TimePicker">
+        <item name="android:headerBackground">@color/darkColorAccent</item>
+    </style>
+
 
 
 </resources>
