--- a/app/src/main/res/layout/popup_przypomnienie.xml
+++ b/app/src/main/res/layout/popup_przypomnienie.xml
@@ -123,7 +123,7 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/KiedyV"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/KiedyV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
